Production ready deployment

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # Environment variables for production
-FLASK_ENV=development
-SECRET_KEY=your_very_secret_key_here_change_in_production
+SECRET_KEY=your-super-secret-key-change-this-in-production
+FLASK_DEBUG=False
+FLASK_HOST=0.0.0.0
+PORT=5000
 
-# Download settings
-MAX_DOWNLOAD_SIZE=1000000000  # 1GB in bytes
-CONCURRENT_DOWNLOADS=3
-DOWNLOAD_TIMEOUT=3600  # 1 hour in seconds
-
-# File upload settings
+# Optional: Uncomment and modify if needed
+# MAX_DOWNLOAD_SIZE=1000000000
+# CONCURRENT_DOWNLOADS=3
+# DOWNLOAD_TIMEOUT=3600
 MAX_UPLOAD_SIZE=10485760  # 10MB in bytes
 ALLOWED_EXTENSIONS=txt,csv
 
