Fix Railway deployment: Updated gunicorn config, added health endpoint, fixed PORT handling

--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,11 @@
 [build]
-builder = "nixpacks"
+builder = "dockerfile"
 
 [deploy]
-startCommand = "gunicorn app:app --bind 0.0.0.0:$PORT --workers 2 --timeout 300"
-healthcheckPath = "/"
-healthcheckTimeout = 100
+healthcheckPath = "/health"
+healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
+replicas = 1
+
+[env]
+FLASK_ENV = "production"
